--- a/1.html
+++ b/1.html
@@ -1,22 +1,54 @@
 <!doctype html>
 <html>
  <head>
-   <title>JEONSOYOUNG</title>
+   <title>JEONSOYOUNG -CSS</title>
    <meta charest="utf-8">
+   <style>
+   a{
+     color:pink;
+     font-size:85px;
+     text-align:center;
+   }
+   h2{
+     font-size:50px;
+
+   }
+   h3{
+     font-size:70px;
+     text-align:center;
+     color:black;
+     border-width:10px;
+     border-color:pink;
+     border-style:solid;
+     padding:50px;
+     border-right: 1px solid white;
+     border-left: 1px solid white;
+
+     padding:20px
+   }
+   li{
+     border-right: 2px solid purple;
+   }
+
+   #active{
+     color:red;
+   }
+
+   </style>
  </head>
  <body>
 <img src="한림대.jpg" width= "100%">
   <br><br><br>
-  <h2><strong><u><font size="100%"><a href="index.html">JeonSoYoung</a></font></u></strong></h2>
+  <h2><strong><u><a href="index.html">JeonSoYoung</a></u></strong></h2>
    <br><br>
-   <li><a href="http://adv.hallym.ac.kr/user/indexMain.do?siteId=adpr" target="_blank">광고홍보</a></li><br>
-
+   <h2><a href="http://adv.hallym.ac.kr/user/indexMain.do?siteId=adpr" target="_blank" id="active">광고홍보학과</a></h2><br>
+<br><br><br><br><br><br>
      <h3>광고홍보학은 광고활동과 광고현상 등을 연구대상으로 하는 ‘광고’와 기업 단체 <br>
      또는 관공서 등의 조직체가 커뮤니케이션 활동을 통하여 스스로 생각이나 계획 활동<br>
       업적 등을 널리 알리는 ‘홍보’로 구분됩니다. <br>
      광고 산업은 오늘날 정치, 경제, 사회, 문화 등 모든 분야에서 중요한 역할을 담당하게<br>
      되었습니다. 광고홍보학과에서는 현대 사회에서 광고의 역할과 광고에 나타나는 커뮤니케이션 <br>
-     현상을 과학적으로 탐구함으로써 광고계의 능력 있는 인재를 양성하는데 교육목표를 두고 있습니다.</h3>
+     현상을 과학적으로 탐구함으로써 광고계의 능력 있는 인재를 양성하는데 교육목표를 두고 있습니다.</h>
 
 
 </body>
