--- a/3.html
+++ b/3.html
@@ -3,6 +3,14 @@
  <head>
    <title>JEONSOYOUNG</title>
    <meta charest="utf-8">
+   <style>
+   a{
+     color:pink;
+   }
+   #active{
+     color:red;
+   }
+   </style>
  </head>
  <body>
    <img src="디지털.jpg" width= "100%">
@@ -10,7 +18,7 @@
   <h2><strong><u><font size="100%"><a href="index.html">JeonSoYoung</a></font></u></strong></h2>
   <br><br>
    <li><a href="https://sites.google.com/view/dah-hallym" target="_blank">디지털인문예술</a></li>
-    <li><a href="3.html">작품</a> </li>
+    <li><a href="3.html" id="active">작품</a> </li>
 
     <img src="기하학적 드로잉.jpg" width="60%">
     <img src="기하학적 드로잉2.jpg" width="60%">
