--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!doctype html>
 <html>
  <head>
-   <title>JEONSOYOUNG</title>
+   <title>JEONSOYOUNG -CSS</title>
    <meta charest="utf-8">
+   <style>
+   a{
+     color:pink;
+   }
+   h2{
+     color:pink;
+     border-bottom: 1px solid purple;
+     padding:20px;
+   }
+
+   .c{
+     color:gray
+   }
+   </style>
  </head>
  <body>
    <img src="우웩.jpg" width= "100%">
   <br><br><br>
   <h2><strong><u><font size="100%">JeonSoYoung</font></u></strong></h2>
-   <br><br><li>광고홍보</li><br>
-   <li>디지털인문예술</li>
+   <br><br><li class="c">광고홍보</li><br>
+   <li class="c">디지털인문예술</li>
    <br><br>
 <ul>
 
