--- a/2.html
+++ b/2.html
@@ -3,21 +3,44 @@
  <head>
    <title>JEONSOYOUNG</title>
    <meta charest="utf-8">
+   <style>
+   a{
+     color:pink;
+     font-size:20px;
+   }
+   li{
+     border-right: 5px soild purple;
+   }
+   #active{
+     color:red;
+   }
+   h3{
+      text-align:center;
+      border-width:5px;
+      border-color:pink;
+      border-style:solid;
+    padding:50px;
+    border-right: 1px solid white;
+    border-left: 1px solid white;
+   }
+
+   </style>
  </head>
  <body>
    <img src="디지털.jpg" width= "100%">
   <br><br><br>
-  <h2><strong><u><font size="100%"><a href="index.html">JeonSoYoung</a></font></u></strong></h2>
+  <h2><strong><u><a href="index.html">JeonSoYoung</a></u></strong></h2>
   <br><br>
-   <li><a href="https://sites.google.com/view/dah-hallym" target="_blank">디지털인문예술</a></li>
-    <li><a href="3.html">작품</a> </li>
-
+   <h2><a href="https://sites.google.com/view/dah-hallym" target="_blank" id="active">디지털인문예술학과</a></h2>
+    <h2><a href="3.html">작품</a> </h2>
+<br><br><br>
       <br><h3>디지털 기술의 비약적인 발전은 인문학의 근본적인 변화를 요구하는 동시에 인문학의 가능성을 획기적으로<br>
       증대시키고 있다. 디지털 기술은 또한 오랜 세월 동안 쌓인 인문학의 지적 자산과 미적 감각, 창의력을<br>
-      절실하게 필요로 하고 있다. 여기에 디지털 기술과 인문학이 화학적으로 결합할 필요성이 있다. <br>
+      절실하게 필요로 하고 있다. 여기에 디지털 기술과 인문학이 화학적으로 결합할 필요성이 있다.<br>
       디지털인문예술 융합전공은 디지털 문명과 기술에 대한 인문학적 성찰과 함께 문화와 예술에 대한 감각을<br>
-      바탕으로 디지털 매체를 활용하여 새로운 것을 창조하는 능력을 함양시킬 것이다. <br>
+      바탕으로 디지털 매체를 활용하여 새로운 것을 창조하는 능력을 함양시킬 것이다.<br>
       디지털인문예술 융합전공은 21세기 정보사회에서 디지털 기술에 대한 이해와 인문학적 소양을 갖춘<br>
       창의적 인재를 양성할 것을 목표로 한다.</h3>
+
   </body>
 </html>
